--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -160,7 +160,7 @@ Reporting: The software system generates reports on the truck traffic plan, whic
   <script src="vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
