--- a/portfolio-details_1.html
+++ b/portfolio-details_1.html
@@ -95,6 +95,7 @@
               <h2>About Projects</h2>
               <p>
                Title: Optimizing Truck Traffic Management on Terminal Level</p>
+              <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
 
 <p>Problem Statement:</p>
 
