--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Yashpal Singh</h4>
               <p><em>Innovative and deadline-driven UX/UI Designer with 6.8+ years of experience designing and developing user-centered design for website, mobile apps for indian govt/ foreign government and various product for the organisations from initial concept to final, polished deliverable.</em></p>
@@ -384,14 +384,14 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Web 11</h4>
+                <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="img/portfolio/bd-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="img/portfolio/bd-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details_9.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
