--- a/portfolio-details_9.html
+++ b/portfolio-details_9.html
@@ -40,19 +40,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="img/portfolio/EV.PNG" alt="">
+                  <img src="img/portfolio/EV.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="img/portfolio/EV-2.PNG" alt="">
+                  <img src="img/portfolio/EV-2.png" alt="">
                 </div>
                 
                  <div class="swiper-slide">
-                  <img src="img/portfolio/EV-3.PNG" alt="">
+                  <img src="img/portfolio/EV-3.png" alt="">
                 </div>
                 
                  <div class="swiper-slide">
-                  <img src="img/portfolio/EV-4.PNG" alt="">
+                  <img src="img/portfolio/EV-4.png" alt="">
                 </div>
 
               </div>
