--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Yashpal Singh</h1>
       <p>I'm <span class="typed" data-typed-items="UX/UI Designer, UI Developer, Certified Scrum Master, Emerging Product Owner"></span></p>
-      <p>Having 7 years of IT experience & IIM Kozhikode alumni status</p>
+      <p>Having 8 years of IT experience & IIM Kozhikode alumni status</p>
       <div class="social-links">
         <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -95,7 +95,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>From:</strong> <span>India</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Master degree:</strong> <span>Executive MBA(IT Management & Analytics), IIM Kozhikode</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>yashsingh.singh491@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Currently With:</strong> <span>Providence Global Center LLP (US Healthcare Product Based Company)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Currently With:</strong> <span>Unirac Inc (US Manufacturing Product Based Company)</span></li>
                 </ul>
               </div>
             </div>
@@ -291,14 +291,14 @@
               <p><em>Innovative and deadline-driven UX/UI Designer with 6.8+ years of experience designing and developing user-centered design for website, mobile apps for indian govt/ foreign government and various product for the organisations from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>7837580307</li>
-                <li>yashsingh.singh491@gmail.com</li>
+                <li>&nbsp;&nbsp;&nbsp;yashsingh.singh491@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Executive MBA (IT Management &amp; Analytics</h4>
-              <h5>2015 - 2016</h5>
+              <h5>2020 - 2022</h5>
               <p><em>Indian Institute Of Management, Kozhikode</em></p>
                 </div>
             <div class="resume-item">
@@ -309,9 +309,24 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+		  <div class="resume-item">
+              <h4>Lead Product Engineer-UX/UI</h4>
+              <h5>July 2023 - Present</h5>
+              <p><em>Hyderabad </em></p>
+              <ul>
+                <li>Doing research about market competitors, creating empathy mapping, site mapping / Information architecture.</li>
+                <li>Creating style guide and instructing teams to improve in an iterative manner as per story boarding technique. </li>
+                <li>Helping team and creating low-fidelity wireframes by doing A/B testing simultaneously.</li>
+                <li>Achieved 50% user efforts reduction by automating the deploying methodology.</li>
+                <li>Doing usability testing and discussing with the stakeholder about requirement changes and feedback gathered.</li>
+                <li>Creating and helping team to create high fidelity wireframe and introducing SEO and google web analytics</li>
+                <li>Use of Genrative AI to analysis data from images, pdf and email in order to fill intake customer form data to improve user experience and analysing the same for prediction of customer footfall for future products.</li>
+                <li>Trained fellow UX engineer and collaborate with them on regular basis and also define UX standard for the organisation.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Senior Cloud Engineer-UX/UI</h4>
-              <h5>Aug 2021 - Present</h5>
+              <h5>Aug 2021 - June 2023</h5>
               <p><em>Hyderabad </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
