--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Full name:</strong> <span>Yashpal Singh Khokhar</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Bachelor degree:</strong> <span>B.Tech(Computer Science & Engineering), Chandigarh Engineering College</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7837580307</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> &nbsp;&nbsp;&nbsp; <span>+91 7837580307</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hyderabad</span></li>
                 </ul>
               </div>
@@ -288,16 +288,16 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Yashpal Singh</h4>
-              <p><em>Innovative and deadline-driven UX/UI Designer with 6.8+ years of experience designing and developing user-centered design for website, mobile apps for indian govt/ foreign government and various product for the organisations from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven UX/UI Designer with 8+ years of experience designing and developing user-centered design for website, mobile apps for indian govt/ foreign government and various product for the organisations from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>7837580307</li>
-                <li>&nbsp;&nbsp;&nbsp;yashsingh.singh491@gmail.com</li>
+                <li>yashsingh.singh491@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Executive MBA (IT Management &amp; Analytics</h4>
+              <h4>Executive MBA (IT Management &amp; Analytics)</h4>
               <h5>2020 - 2022</h5>
               <p><em>Indian Institute Of Management, Kozhikode</em></p>
                 </div>
