--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -155,7 +155,7 @@ Reporting: The software system generates reports on the truck traffic plan, whic
   <script src="vendor/waypoints/noframework.waypoints.js"></script>
   <script src="vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Template Main JS File 
   <script src="js/main.js"></script>
    <script>
     // disable right click
@@ -184,7 +184,7 @@ Reporting: The software system generates reports on the truck traffic plan, whic
         }
     }
  
-</script>
+</script>-->
 
 </body>
 
