--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -91,13 +91,13 @@
               <h2>About Projects</h2>
               <p>
                Title: Optimizing Truck Traffic Management on Terminal Level</p>
-               <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 70%"/>
+               <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
 
 <p><b>Problem Statement:</b></p>
 
 A transportation company is facing challenges in managing the truck traffic between different terminals. The current system involves manual planning and coordination, which leads to inefficiencies and delays in the delivery of goods. The company wants to develop a new software system that automates the process of truck traffic management on the terminal level.
 
-<span><b>Requirements:</b><span>
+<p><b>Requirements:</b><p>
 
 <p>Requirement 1: The truck traffic is executed on terminal level (e.g. Terminal A-Terminal B), please disregard pickup and distribution of load from the customer.
 
@@ -119,15 +119,15 @@ The software system should have a single view where the user can perform all the
 
 <p>To address the transportation company's challenges, our team developed a web-based software system that automates the process of truck traffic management on the terminal level. The software system includes the following features:
 
-Dashboard: The dashboard provides a single view of all the terminals participating in the plan. The user can select multiple terminals and view the current status of the truck traffic between them.
+<p>Dashboard: The dashboard provides a single view of all the terminals participating in the plan. The user can select multiple terminals and view the current status of the truck traffic between them.</p>
 
-Terminal Management: The user can add, edit, or delete terminals from the system. The distance between the terminals can also be specified, which will be used by the software system to optimize the truck traffic between them.
+<p>Terminal Management: The user can add, edit, or delete terminals from the system. The distance between the terminals can also be specified, which will be used by the software system to optimize the truck traffic between them.</p>
 
-Truck Traffic Management: The user can create a new truck traffic plan between the selected terminals. The software system will optimize the plan based on the distance and time required to cover that distance. The user can also view the current status of the truck traffic plan, which includes the estimated time of arrival and the actual time of arrival.
+<p>Truck Traffic Management: The user can create a new truck traffic plan between the selected terminals. The software system will optimize the plan based on the distance and time required to cover that distance. The user can also view the current status of the truck traffic plan, which includes the estimated time of arrival and the actual time of arrival.</p>
 
-Reporting: The software system generates reports on the truck traffic plan, which includes the estimated time of arrival, actual time of arrival, and any delays encountered during the transportation.
+<p>Reporting: The software system generates reports on the truck traffic plan, which includes the estimated time of arrival, actual time of arrival, and any delays encountered during the transportation.</p>
 </p>
-<span><b>Conclusion:</b></span>
+<p><b>Conclusion:</b></p>
 
 <p>The web-based software system developed by our team has helped the transportation company to automate the process of truck traffic management on the terminal level. The software system has improved the efficiency of the transportation company by optimizing the truck traffic between different terminals. The user can select multiple terminals, provide information about the distance and time required to cover that distance, and create a truck traffic plan. The use of modal/pop-up windows has been minimized, which has improved the user experience. The software system also generates reports on the truck traffic plan, which enables the transportation company to identify any delays encountered during the transportation.
  </p>             
@@ -157,7 +157,7 @@ Reporting: The software system generates reports on the truck traffic plan, whic
 
    
   <script src="js/main.js"></script>
- <!-- Template Main JS File
+ <!-- Template Main JS File>-->
   <script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
@@ -185,7 +185,7 @@ Reporting: The software system generates reports on the truck traffic plan, whic
         }
     }
  
-</script>-->
+</script
 
 </body>
 
