--- a/portfolio-details_1.html
+++ b/portfolio-details_1.html
@@ -38,7 +38,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -83,7 +83,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -95,13 +95,13 @@
               <h2>About Projects</h2>
               <p>
                Title: Optimizing Truck Traffic Management on Terminal Level</p>
-              <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
+              <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
 
-<p>Problem Statement:</p>
+<p><b>Problem Statement:</b></p>
 
 A transportation company is facing challenges in managing the truck traffic between different terminals. The current system involves manual planning and coordination, which leads to inefficiencies and delays in the delivery of goods. The company wants to develop a new software system that automates the process of truck traffic management on the terminal level.
 
-<span>Requirements:<span>
+<p><b>Requirements:</b><p>
 
 <p>Requirement 1: The truck traffic is executed on terminal level (e.g. Terminal A-Terminal B), please disregard pickup and distribution of load from the customer.
 
@@ -119,7 +119,7 @@ Requirement 4: It is preferred that all actions are performed in a single view w
 
 The software system should have a single view where the user can perform all the actions required for truck traffic management between different terminals. The use of modal/pop-up windows should be minimized to improve the user experience and simplify the process.
 </p>
-<span>Solution:</span>
+<p><b>Solution:</b></p>
 
 <p>To address the transportation company's challenges, our team developed a web-based software system that automates the process of truck traffic management on the terminal level. The software system includes the following features:
 
@@ -131,7 +131,7 @@ Truck Traffic Management: The user can create a new truck traffic plan between t
 
 Reporting: The software system generates reports on the truck traffic plan, which includes the estimated time of arrival, actual time of arrival, and any delays encountered during the transportation.
 </p>
-<span>Conclusion:</span>
+<p><b>Conclusion:</b></p>
 
 <p>The web-based software system developed by our team has helped the transportation company to automate the process of truck traffic management on the terminal level. The software system has improved the efficiency of the transportation company by optimizing the truck traffic between different terminals. The user can select multiple terminals, provide information about the distance and time required to cover that distance, and create a truck traffic plan. The use of modal/pop-up windows has been minimized, which has improved the user experience. The software system also generates reports on the truck traffic plan, which enables the transportation company to identify any delays encountered during the transportation.
  </p>             
