--- a/portfolio-details_2.html
+++ b/portfolio-details_2.html
@@ -38,7 +38,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="row">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -104,7 +104,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="row">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -116,24 +116,22 @@
               <h2>About Projects</h2>
               <p>Bidgely Your Power Saving App</p>
               <img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 100%"/>
-              <p>Objectives –</p>
-<ol>•	Login
-•	Landing page or status dashboard
-•	Historical records, usage trends…
-•	Receiving a notification and clicking on it
-•	Rewards received and claimed so far.</ol>
+              <p><b>Objectives –</b></p>
+
 <p>In this use case study, I'm working on novel solutions that are brand-new to the market yet have a significant negative influence on the environment and utilize a lot of natural resources. A private owner EV app project's UX design aims to improve user experience, offer a better overall experience for charging a personal EV, and reduce monthly costs for the owner.
 </p>
-<p>Requirements –</p>
+<p><b>Requirements –</b></p>
 <p>The application relies on AI (Artificial Intelligence) to recommend to the customer when it is more convenient for the customer to charge his vehicle, based on his current Electricity Tariffs. The user can also completely delegate the charging strategy to the application and allow the AI to autonomously control the charge start and stop, to maximize the cost savings on the electric bill. The app should display, at any point in time, the charge status and battery level of the car, together with additional information such as the required time to fully recharge the battery to 100% or to a minimum threshold.
 Create wireframe and user workflow while introducing following screens.</p>
-<ol>•	Login
-•	Landing page or status dashboard
-•	Historical records, usage trends…
-•	Receiving a notification and clicking on it
-•	Rewards received and claimed so far.</ol>
+<ol>
+  <li>•	Login</li>
+<li>•	Landing page or status dashboard</li>
+<li>•	Historical records, usage trend </li>
+<li>•	Receiving a notification and clicking on it</li>
+<li>•	Rewards received and claimed so far.</li>
+</ol>
 
-<p>User Research -</p>
+<p><b>User Research -</b></p>
 <p>User research is essential for understanding the needs of the EV owner and business profit as well as generating revenue by offering customer to use our services. This involves interviewing various EV owner and observing how much they curious and interested in getting solution that we will offer them, what are the problems they usually face, how they tackle the same. As we can’t interview and follow the process right now so here doing “Qualitative analysis or research” is must to understand the need of the app and how we can generate revenue.
 So, before starting designing the user workflow I have done some basic market research to understand how our competitors are and what they were offering, what are there USP and how we can succeed to attract customer to our app and make the retention rate same.
 </p>
@@ -141,10 +139,10 @@ So, before starting designing the user workflow I have done some basic market re
 <ol>•	Competitive Analysis
 •	Persona Development</ol>
 
-<p>User Interface Design -</p>
+<p><b>User Interface Design -</b></p>
 <p>Once I have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use, provides a good user experience, have accessibility, usability, consistency in information flow, color theory should be aligned to company standard. 
 </p>
-<p>UX Screens -</p> 
+<p><b>UX Screens -</b></p> 
 <p>I have utilized a dark theme that will not only relax user eyes but also accomplish consistency by using a black and green theme to provide a simple user experience with a strong impact.
 I've designed the process such that users can fulfil their goals in 3–4 clicks and without even scrolling, which will improve the user app experience and require less scrolling.
 Because mobile screens are typically small, it is necessary to display text and establish context so that users may grasp a lot from a small number of words to provide information and create an aesthetically pleasing design.
