--- a/portfolio-details_2.html
+++ b/portfolio-details_2.html
@@ -42,7 +42,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+               <!-- <div class="swiper-slide">
                   <img src="img/portfolio/bd-1.png" alt="">
                 </div>
 
@@ -76,7 +76,7 @@
                 
                 <div class="swiper-slide">
                   <img src="img/portfolio/bd-9.png" alt="">
-                </div>
+                </div>-->
                 <div class="swiper-slide">
                   <img src="img/portfolio/bd-10.png" alt="">
                 </div>
