--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
 
   <!-- Template Main JS File -->
   <script src="js/main.js"></script>
-  <!--<script>
+  <script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
  
@@ -1029,7 +1029,7 @@
         }
     }
  
-</script>-->
+</script>
 
 </body>
 
